--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    margin: 0;
 }
 
 html{
@@ -35,7 +36,7 @@ a{
 
 header{
     display: flex;
-    height: 80px;
+    height: 60px;
     justify-content: space-between;
     align-items: center;
 }
@@ -46,13 +47,33 @@ footer{
     align-items: center;
 }
 
-a:hover{
-    color: rgb(53, 53, 53);
+hr{
+    margin-bottom: 10px;
+    border-color: black;
 }
 
+h1{
+    font-size: 48px;
+    background: linear-gradient(to right, blue,white);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+h3{
+    padding: 25px;
+}
 
 #nav-flotante{
     padding-right: 500px;
+}
+
+#nav-flotante a:hover{
+    background-color: crimson;
+    padding: 10px;
+}
+
+a:hover{
+    color: black;
 }
 
 .logo-git img{
@@ -74,7 +95,45 @@ a:hover{
     font-size: 20px;
 }
 
+#bandos{
+    padding: 50px;
+}
+
+#protagonistas{
+    padding: 50px;
+}
+
+#peliculas{
+    padding: 50px;
+}
+
 #peliculas img{
     border: 2px white solid;
     border-radius: 2px;
+    margin-top: 20px;
+}
+
+#peliculas li{
+    list-style: none;
+    padding: 10px;
+}
+
+@media (max-width:600px){
+    header{
+        flex-direction: column;
+        align-self: left;
+    }
+    nav{
+        padding: 10px 0px;
+    }
+    img{
+        max-height: 270px;
+        max-width: 270px;
+    }
+    h1{
+        font-size: 40px;
+    }
+    ol{
+        padding: 0px;
+    }
 }
